tests/negative/neg_try_send_compound_else_use.safe
-- Test: neg_try_send_compound_else_use
-- Description: Access-typed channel elements are rejected before try_send path-sensitivity checks run.
-- Expected: REJECT source_frontend_error

package neg_try_send_compound_else_use

   type payload is record
      value : integer;


   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      Source  : payload_ptr = new ((value = 1) as payload);
      success : boolean = false;
      ready   : boolean = false;

      try_send data_ch, Source, success;
      if success and then ready
      else
         send data_ch, Source;



